<resources>
    <string name="app_name">悦骑圈</string>
    <string name="slogan">悦骑圈，悦骑“越”开心</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="rank_column">排行榜</string>
    <string name="riding_activity">开始活动</string>
    <string name="other_login">其他登陆</string>
    <string name="login_account">请输入你的账户名</string>
    <string name="login_password">请输入你的账户密码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="loginName">账户名</string>
    <string name="nikeName">昵称</string>
    <string name="password">密码</string>
    <string name="phoneNum">手机号</string>
    <string name="cilck_change">点击设置头像</string>
    <string name="join">加入</string>
    <string name="establish">创建</string>
    <string name="hot_travel_action">热门活动</string>
    <string name="friends_travel">好友动态</string>
    <string name="my_action">活动</string>
    <string name="my_travel_note">动态</string>
    <string name="log_out">退出登陆</string>
    <string name="my_information">我的信息</string>
    <string name="my_rank">我的排行</string>
    <string name="about_us">关于我们</string>
    <string name="my_riding">我的活动</string>
    <string name="circle">骑行圈</string>
    <string name="add_friend">加好友</string>
    <string name="my_travel_notes">我的动态</string>
    <string name="write_travel_note">发动态</string>
    <string name="cancel">取消</string>
    <string name="send">发送</string>
    <string name="send_message">发消息</string>
    <string name="detailed">详情</string>
    <string name="create_action">创建骑行活动</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
