<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline32"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline33"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <ImageView
        android:id="@+id/portrait"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/guideline33"
        app:layout_constraintRight_toLeftOf="@+id/guideline32"
        app:layout_constraintTop_toTopOf="@+id/guideline36"
        app:srcCompat="@drawable/travel_sample_portrait"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/guideline36"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline39"
        app:layout_constraintLeft_toLeftOf="@+id/guideline37"
        app:layout_constraintRight_toLeftOf="@+id/guideline38"
        app:layout_constraintTop_toTopOf="@+id/guideline39"
        app:layout_constraintVertical_bias="0.477"
        app:srcCompat="@drawable/back"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline36"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline37"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline38"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline39"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <EditText
        android:id="@+id/loginName"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/loginName"
        android:textColorHint="@color/colorPrimary"
        android:inputType="textPersonName"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toLeftOf="@+id/guideline41"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline40"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/guideline45"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline45" />

    <EditText
        android:id="@+id/nikeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/nikeName"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline40"
        app:layout_constraintRight_toLeftOf="@+id/guideline41"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintTop_toTopOf="@+id/guideline50"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline50" />



    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:textColorHint="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline40"
        app:layout_constraintRight_toLeftOf="@+id/guideline41"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline49"
        app:layout_constraintTop_toTopOf="@+id/guideline49"
        android:layout_marginTop="0dp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:textColorHint="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phoneNum"
        android:inputType="phone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline40"
        app:layout_constraintRight_toLeftOf="@+id/guideline41"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/guideline47"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toTopOf="@+id/guideline47"
        android:layout_marginTop="0dp" />

    <Button
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/login_button_shape"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline48"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline48"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:text="@string/register" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline40"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline41"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="306dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline42"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline43"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18333334"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="66dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline44"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35555556"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="128dp" />

    <RadioButton
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/male"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline51"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/guideline40"
        app:layout_constraintRight_toLeftOf="@+id/guideline33"
        app:layout_constraintTop_toTopOf="@+id/guideline51"
        app:layout_constraintVertical_bias="0.6"
        tools:text="@string/male" />

    <RadioButton
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/female"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline51"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintLeft_toLeftOf="@+id/guideline32"
        app:layout_constraintRight_toLeftOf="@+id/guideline41"
        app:layout_constraintTop_toTopOf="@+id/guideline51"
        tools:text="@string/female" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline45"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45679012" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline47"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline48"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline49"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline50"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline51"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cilck_change"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="@+id/guideline34"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline34"
        app:layout_constraintVertical_bias="0.47"
        app:layout_constraintRight_toLeftOf="@+id/guideline42"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline42" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline34"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />

</android.support.constraint.ConstraintLayout>