<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bike.circle.activities.StartActionActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorGary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/guideline52"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline21"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="7dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline31"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="36dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline35"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="180dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riding_activity"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline44"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintLeft_toLeftOf="@+id/guideline35"
        app:layout_constraintRight_toLeftOf="@+id/guideline35"
        app:layout_constraintTop_toTopOf="@+id/guideline44"
        app:layout_constraintVertical_bias="0.586" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline44"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"
        tools:layout_editor_absoluteY="28dp"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline44"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintLeft_toLeftOf="@+id/guideline21"
        app:layout_constraintRight_toLeftOf="@+id/guideline31"
        app:layout_constraintTop_toTopOf="@+id/guideline44"
        app:layout_constraintVertical_bias="0.545"
        app:srcCompat="@drawable/start_action_back" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline52"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        tools:layout_editor_absoluteY="57dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline53"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.59" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline53"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline52"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/start_action_banner" />

    <Button
        android:id="@+id/establish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/start_action_button"
        android:text="@string/establish"
        android:textColor="@color/colorWhite"
        android:textSize="18dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline54"
        app:layout_constraintRight_toLeftOf="@+id/guideline55"
        app:layout_constraintTop_toTopOf="@+id/guideline58"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline58" />

    <Button
        android:id="@+id/join"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:background="@drawable/start_action_button"
        android:text="@string/join"
        android:textColor="@color/colorWhite"
        app:layout_constraintRight_toLeftOf="@+id/guideline57"
        app:layout_constraintLeft_toLeftOf="@+id/guideline56"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toTopOf="@+id/guideline58"
        app:layout_constraintTop_toTopOf="@+id/guideline58" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline54"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline55"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="151dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline56"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.58"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="209dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline57"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90555555"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="326dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/slogan"
        android:textColor="@color/colorLine"
        app:layout_constraintBottom_toTopOf="@+id/guideline59"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintLeft_toLeftOf="@+id/guideline35"
        app:layout_constraintRight_toLeftOf="@+id/guideline35"
        app:layout_constraintTop_toTopOf="@+id/guideline59" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline58"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline59"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

</android.support.constraint.ConstraintLayout>
